<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">博汇通讯录</string>
    <string name="contacts">contacts</string>
    
    <string name="accountSpinnerLabel">Account</string>
    <string name="addContactButtonLabel">Add Contact</string>
    <string name="addContactTitle">Add Contact</string>
    <string name="allAccounts">All Accounts</string>
    <string name="contactCreationFailure">Contact creation failed, check logs.</string>
    <string name="contactEmailLabel">Contact Email</string>
    <string name="contactNameLabel">Contact Name</string>
    <string name="contactPhoneLabel">Contact Phone</string>
    <string name="save">Save</string>
    <string name="selectAccountLabel">Select</string>
    <string name="selectLabel">Select label</string>
    <string name="showInvisible">Show Invisible Contacts (Only)</string>
    <string name="targetAccountLabel">Target Account</string>
    <string name="undefinedTypeLabel">(Undefined)</string>
</resources>
